@@ -1,3 +1,7 @@
+[B]Version 2.0.2 - 2011-09-xx[/B]
+- Added [I]Best[/I] quality to play streams at best quality available
+- Changed [I]High[/I] quality to play streams at 1 mbit/s useful for ATV1 users, etc.
+
 [B]Version 2.0.1 - 2011-09-20[/B]
 - Added DR HD
 - New graphics
